<resources>
    <string name="app_name">DocTalk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter Age</string>
    <string name="gender">Gender:</string>
</resources>
